# attestation-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  PROGRESS.md  README.md  code_guidelines.md  snp_fixes.txt
.github/workflows/: ci.yml
amd-vtpm/: Cargo.toml  README.md
amd-vtpm/example/: Cargo.toml
amd-vtpm/example/src/: main.rs
amd-vtpm/src/: amd_kds.rs  certs.rs  imds.rs  lib.rs  main.rs  report.rs
amd-vtpm/tests/: integration_tests.rs
benches/: az_snp.rs  az_snp_attest.rs  az_tdx.rs  snp.rs  tdx.rs  verification.rs
certs/amd/genoa/: asvk.der
certs/amd/milan/: asvk.der
certs/amd/turin/: ark.der  asvk.der
coco-provider-sdk/: .gitignore  Cargo.toml  README.md  build.rs
coco-provider-sdk/examples/: example.rs
coco-provider-sdk/src/: cpu.rs  error.rs  hypervisor.rs  lib.rs  utils.rs
coco-provider-sdk/src/coco/: configfs.rs  legacy.rs  mock.rs  mod.rs  tpm.rs
coco-provider-sdk/src/coco/snp/: README.md  legacy_device.rs  mod.rs  snp_error.rs  types.rs
coco-provider-sdk/src/tests/: lib-test.rs
crates/attestation/: Cargo.toml  README.md
crates/attestation-api/: Cargo.toml  README.md  config.example.toml
crates/attestation-api/src/: config.rs  lib.rs  main.rs  server.rs
crates/attestation-api/src/api/: attest.rs  certs.rs  health.rs  mod.rs  platform.rs  token.rs  verify.rs
crates/attestation-api/src/certs/: cache.rs  manager.rs  mod.rs  nras_provider.rs  revocation.rs  snp_provider.rs  tdx_provider.rs
crates/attestation-api/src/token/: issuer.rs  keys.rs  mod.rs
crates/attestation-api/tests/: api_tests.rs  cert_tests.rs
crates/attestation-cli/: Cargo.toml
crates/attestation-service/: Cargo.toml  README.md  config.example.toml
crates/attestation-service/src/: config.rs  error.rs  main.rs
crates/attestation-service/src/api/: attest.rs  verify.rs
crates/attestation-service/src/certs/: manager.rs  mod.rs
crates/attestation-service/src/middleware/: auth.rs
crates/attestation-service/tests/: api_tests.rs  cert_tests.rs
crates/attestation-wasm/: Cargo.toml  README.md  example.mjs
crates/attestation-wasm-test/: Cargo.toml  example.mjs
crates/attestation-wasm-test/src/: lib.rs
crates/attestation-wasm/src/: lib.rs
crates/attestation/benches/: az_snp_attest.rs
crates/attestation/certs/amd/turin/: ask.der
crates/attestation/examples/: az_snp.rs  az_tdx.rs  gcp_snp.rs  gcp_tdx.rs  gpu_nras.rs  snp.rs  tdx.rs
crates/attestation/src/: error.rs  lib.rs  types.rs
crates/attestation/test_data/az_snp/: evidence-v1.json  imds-vcek.der  milan-v3-attestation.json
crates/attestation/test_data/az_tdx/: live-evidence.json
crates/attestation/test_data/nvidia_gpu/: nras_gpu_x5c_chain.json
crates/attestation/tests/: az_snp_live.rs  az_tdx_live.rs  capture_fixture.rs
example/: sev_snp_attestation.txt
examples/: attest.rs  az_snp.rs  az_snp_attest_cli.rs  az_tdx.rs  gcp_snp.rs  gcp_tdx.rs  snp.rs  tdx.rs
lunal-attestation/: .gitignore  Cargo.toml  Makefile  README.md  evidence.b64  package.json  test.js
lunal-attestation/example/: attestation.txt
lunal-attestation/src/: attestation.rs  lib.rs  main.rs  pcs_client.rs  utils.rs  verify.rs
lunal-attestation/src/amd/: attest.rs  kbs.rs  mod.rs  verify.rs  wasm.rs
lunal-attestation/src/amd_azure/: attest.rs  mod.rs  verify.rs  wasm.rs
lunal-attestation/src/sev_snp/: attest.rs  mod.rs  verify.rs
scripts/: bench_az_snp_attest.sh  test-az-snp-attest.sh
sev-snp/: Cargo.toml  README.md
sev-snp/examples/: verify.rs
sev-snp/src/: cert_type.rs  kds.rs  lib.rs  report.rs  utils.rs  verifier.rs
src/: attestation.rs  collateral.rs  error.rs  lib.rs  main.rs  pcs_client.rs  types.rs  utils.rs  verify.rs  wasm.rs  wasm_verify.rs
src/amd_azure/: attest.rs  mod.rs  verify.rs  wasm.rs
src/sev_snp/: attestation.rs  mod.rs  verify.rs
src/tdx/: attestation.rs  mod.rs  pcs_client.rs  verify.rs
test_data/az_snp/: live-evidence.json
test_data/az_tdx/: evidence-v1.json
test_data/collateral/: pck_crl_platform.der  tcb_info_50806f000000.json  tcb_info_90c06f000000.json  tcb_signing_chain.pem  td_qe_identity.json
test_data/snp/: live-evidence-genoa.json  live-vcek-genoa.der
tests/: az_snp_live.rs  az_tdx_live.rs  capture_fixture.rs  live_dcap.rs
vtpm-attestation/: Cargo.toml  README.md
vtpm-attestation/src/: lib.rs  quote.rs
vtpm-attestation/src/hcl/: mod.rs
vtpm-attestation/src/vtpm/: mod.rs  verify.rs
wasm-test/: Cargo.toml  example.mjs
wasm-test/src/: lib.rs
