[workspace]
resolver = "2"
members = [
    "crates/attestation",
    "crates/attestation-cli",
    "crates/attestation-wasm-test",
]
default-members = [
    "crates/attestation",
    "crates/attestation-cli",
    "crates/attestation-wasm-test",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
attestation = { path = "crates/attestation" }
axum = "0.8"
base64 = "0.22"
cfg-if = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
der = "0.7"
ecdsa = "0.16"
getrandom = "0.2"
hex = "0.4"
log = "0.4"
p256 = "0.13"
p384 = "0.13"
pem = "3"
pem-rfc7468 = "1"
rand = "0.8"
reqwest = "0.12"
rsa = "0.9"
scroll = "0.12"
serde = "1"
serde_json = "1"
sev = "7"
sha2 = "0.10"
signature = "2"
spki = "0.7"
subtle = "2"
tempfile = "3"
thiserror = "2"
tokio = "1"
toml = "0.8"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1"
wasm-bindgen = "0.2"
x509-cert = "0.2"
x509-parser = "0.16"
zerocopy = "0.8"

[profile.release]
# Security crates must panic on integer overflow rather than silently wrapping.
# Parsers processing untrusted attestation reports and certificate fields are
# the primary risk sites.
overflow-checks = true
