[package]
name = "amd-vtpm"
version = "0.7.3"
edition = "2021"
repository = "https://github.com/kinvolk/azure-cvm-tooling/"
license = "MIT"
keywords = ["azure", "tpm", "sev-snp"]
categories = ["cryptography", "virtualization"]
description = "vTPM based SEV-SNP attestation for Azure Confidential VMs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "snp-vtpm"
path = "src/main.rs"
required-features = ["attester", "verifier"]

[dependencies]
vtpm-attestation = { path = "../vtpm-attestation", version = "0.7.1" }
bincode.workspace = true
clap.workspace = true
serde.workspace = true
sev.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
x509-cert = { version = "0.2", features = ["std"] }
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }  # Add P-384 support
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
signature = "2.0"
sha2 = "0.10"
der = "0.7"  # For DER encoding/decoding
pem = "3.0"  # For PEM format support


[dev-dependencies]
serde_json.workspace = true
hex.workspace = true

[features]
default = ["verifier"]
attester = ["vtpm-attestation/tpm", "vtpm-attestation/openssl"]
verifier = []
integration_test = []
