[package]
name = "lunal-attestation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
attestation-tdx = ["tdx"]
attestation = ["amd-vtpm/attester"]
wasm = [
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:console_error_panic_hook",
    "getrandom/js"
]

[dependencies]
clap = { workspace = true }
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git" }
hex = { workspace = true }
tdx = { git = "https://github.com/automata-network/tdx-attestation-sdk", package = "tdx", branch = "main", optional = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

urlencoding = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
# Use local workspace member instead of git dependency
amd-vtpm = { path = "../amd-vtpm" }

wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ['console'], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

# Main library demonstration binary
[[bin]]
name = "lunal-main"
path = "src/main.rs"

# Intel TDX attestation binary
[[bin]]
name = "attest-tdx"
path = "src/bin/attest_tdx.rs"
required-features = ["attestation-tdx"]

# AMD Azure attestation binary
[[bin]]
name = "attest-amd"
path = "src/bin/attest_amd.rs"
required-features = ["attestation"]