[package]
name = "vtpm-attestation"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lunal-dev/attestation-rs"
license = "MIT"
keywords = ["tpm", "sev-snp", "tdx"]
categories = ["cryptography", "virtualization"]
description = "Library for vTPM-based attestation in confidential computing environments"

[lib]
path = "src/lib.rs"

[dependencies]
bincode = { workspace = true }
jsonwebkey = { version = "0.3.5", features = ["pkcs-convert"] }
memoffset = "0.9.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde-big-array = "0.5.1"
sev = { workspace = true }
sha2 = "0.10.8"
thiserror = { workspace = true }
tss-esapi = { version = "7.5.1", optional = true }
zerocopy = { workspace = true }
openssl = { version = "0.10", optional = true }

[features]
tpm = ["tss-esapi"]
default = ["verifier"]
attester = ["tpm", "openssl"]
verifier = ["sev/crypto_nossl"]