[package]
name = "attestation-cli"
version = "0.4.0"
edition = "2021"
description = "Command-line interface for TEE attestation evidence generation and verification"
license = "Apache-2.0"

[features]
default = []
attest = ["attestation/attest"]

[dependencies]
attestation = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
