[package]
name = "attestation-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for attestation::verify"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
attestation = { path = "../.." }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1"
