[package]
name = "attestation"
version = "0.4.0"
edition = "2021"
description = "Unified TEE attestation evidence generation and verification"
license = "Apache-2.0"

[features]
# All platform verifiers are on by default so that crates depending on this
# library can verify evidence from any supported TEE without extra feature flags.
# Embedders building minimal binaries should use `default-features = false` and
# enable only the platforms they need.
default = ["snp", "tdx", "az-snp", "az-tdx", "gcp-snp", "gcp-tdx"]

# Platform features — gate which TEE platforms are compiled in
snp = ["dep:sev", "dep:x509-parser"]
tdx = ["dep:x509-parser"]
az-snp = ["snp"]       # Azure SNP depends on bare-metal SNP for report parsing
az-tdx = ["tdx"]       # Azure TDX depends on bare-metal TDX for quote parsing
gcp-snp = ["snp"]      # GCP SNP depends on bare-metal SNP for report parsing
gcp-tdx = ["tdx"]      # GCP TDX depends on bare-metal TDX for quote parsing
dstack = ["tdx"]       # dstack proxies TDX quotes via Unix socket

# NVIDIA GPU attestation via NRAS (Remote Attestation Service).
# Verification is pure JWS (ES384) + JSON parsing, so it works on any target
# including wasm32.
nvidia-gpu = []
# `nvidia-gpu-attest` pulls in NVIDIA's official Rust attestation SDK
# (nv-attestation-sdk). Build prereqs documented in README.md.
nvidia-gpu-attest = ["nvidia-gpu", "dep:nv-attestation-sdk"]

# Guest-side evidence generation (Linux-only, requires TEE hardware).
# Combine with platform features for per-platform builds:
#   attest                 → default SEV-SNP + TDX attestation set
#   attest + az-snp        → Azure SNP attestation over Azure vTPM
#   attest + az-tdx        → Azure TDX attestation over Azure vTPM
#   attest (+ defaults)    → bare-metal + Azure + GCP attesters.
#
# Azure vTPM attesters use az-cvm-vtpm directly with default features disabled
# to avoid the az-cvm-vtpm verifier/OpenSSL path while composing with the
# combined SNP/TDX attestation-api feature set.
attest = ["snp", "tdx", "dep:libc", "dep:tempfile", "dep:pem-rfc7468", "dep:az-cvm-vtpm", "dep:zerocopy"]
az-snp-attest = ["attest", "az-snp"] # Compatibility alias; use `attest` + `az-snp`.
az-tdx-attest = ["attest", "az-tdx"] # Compatibility alias; use `attest` + `az-tdx`.

[dependencies]
async-trait = "0.1"
base64 = "0.22"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
cfg-if = "1"
subtle = "2"

# Crypto
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
# hazmat feature needed internally for PrehashVerifier in TDX DCAP signature verification;
# no hazmat types are re-exported in the public API.
ecdsa = { version = "0.16", features = ["verifying", "hazmat"] }
# RUSTSEC-2023-0071: rsa 0.9 has a timing side-channel in RSA PKCS#1 v1.5
# *decryption* (Marvin Attack). This library uses rsa only for RSA-PSS signature
# *verification* (no private key on the verifier side), so the direct attack
# path does not apply. Accepted until a fixed version is available upstream.
rsa = { version = "0.9", features = ["sha2"] }
x509-cert = "0.2"
x509-parser = { version = "0.16", optional = true }
der = { version = "0.7", features = ["alloc", "oid"] }
spki = "0.7"
signature = "2"

# Binary parsing
scroll = "0.12"

# Attest-side dependencies (cross-platform parts)
libc = { version = "0.2", optional = true }
tempfile = { version = "3", optional = true }
sev = { version = "7", default-features = false, features = ["snp", "crypto_nossl"], optional = true }
pem-rfc7468 = { version = "1", optional = true, features = ["alloc"] }
zerocopy = { version = "0.8", optional = true, features = ["derive"] }
pem = "3.0.6"

# Native (non-WASM) dependencies — needed for cert fetching on any OS.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net", "io-util"] }

# Guest-side attestation crates — Linux-only (require TEE hardware / vTPM)
[target.'cfg(target_os = "linux")'.dependencies]
az-cvm-vtpm = { version = "0.8.1", default-features = false, features = ["attester"], optional = true }
nv-attestation-sdk = { git = "https://github.com/NVIDIA/attestation-sdk", rev = "0c1be386a8fbb8f2766a6a556d10df86f5fed9d3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
getrandom = { version = "0.2", features = ["js"] }
# `wasmbind` routes `chrono::Utc::now()` through `js_sys::Date` on
# wasm32-unknown-unknown. Without it chrono falls back to `SystemTime::now()`,
# which panics on that target — trapping every real EAT/cert expiry check in
# the browser (see verify.rs `exp`/validity enforcement).
chrono = { version = "0.4", default-features = false, features = ["std", "now", "wasmbind"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["async_tokio"] }
async-trait = "0.1"
tempfile = "3"

[[bench]]
name = "snp"
harness = false
required-features = ["snp"]

[[bench]]
name = "tdx"
harness = false
required-features = ["tdx"]

[[bench]]
name = "az_snp"
harness = false
required-features = ["az-snp"]

[[bench]]
name = "az_tdx"
harness = false
required-features = ["az-tdx"]

[[bench]]
name = "az_snp_attest"
harness = false
required-features = ["attest", "az-snp"]

[[example]]
name = "snp"
required-features = ["attest", "snp"]

[[example]]
name = "tdx"
required-features = ["attest", "tdx"]

[[example]]
name = "az_snp"
required-features = ["attest", "az-snp"]

[[example]]
name = "az_tdx"
required-features = ["attest", "az-tdx"]

[[example]]
name = "gcp_snp"
required-features = ["attest", "gcp-snp"]

[[example]]
name = "gcp_tdx"
required-features = ["attest", "gcp-tdx"]

[[example]]
name = "gpu_nras"
required-features = ["nvidia-gpu-attest", "attest"]
